# stat-rethinking

./: README.md  pyproject.toml
week_1/: hw.ipynb
week_2/: hw_week2.ipynb  hw_week2_v2_bambi.ipynb
week_3/: hw_3-bambi.ipynb  hw_3.ipynb
