[tool.poetry]
name = "statistical_rethinking"
version = "0.1.0"
description = ""
authors = ["brb <victor_bouzas@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymc = "^5.0.1"
pandas = "^1.5.2"
numpy = "^1.24.1"
matplotlib = "^3.6.2"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
